k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zero2prod-service
  labels:
    app: zero2prod
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: zero2prod
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
